fix: More gap in mobile because large option names.

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -46,7 +46,7 @@
 
     }
 
-    category-button button {
+    category-component button {
 
        width: 100px;
        height: 75px;
@@ -56,16 +56,16 @@
 
     }
 
-    category-button img {
+    category-component img {
 
        width: 35px;
        height: 35px;
 
     }
 
-    #options { gap: 20px; }
+    #options { gap: 30px; }
 
-    option-button button {
+    option-component button {
 
        width: 100px;
        height: 100px;
@@ -74,14 +74,14 @@
 
     }
 
-    option-button button img {
+    option-component button img {
 
        width: 70px;
        height: 70px;
 
     }
 
-    option-button h2 {
+    option-component h2 {
 
        width: 100px;
        font-size: 20px;
@@ -103,8 +103,8 @@
     footer { flex-shrink: 0; }
     footer p { font-size: 8.5px; }
 
-    option-button:hover { transform: none; }
-    category-button:hover { transform: none; }
+    option-component:hover { transform: none; }
+    category-component:hover { transform: none; }
     #endMessage:hover { transform: none; }
 
  }
